qbittorrent-ns.yml
kind: Namespace
apiVersion: v1
metadata:
  name: qbittorrent
  annotations:
    linkerd.io/inject: enabled
