qbittorrent-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
    part-of: qbittorrent
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
    keel.sh/match-tag: true
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
      part-of: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
        part-of: qbittorrent
    spec:
      serviceAccountName: qbittorrent
      containers:
      - name: qbittorrent
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
        image: dyonr/qbittorrentvpn:latest
        ports:
        - name: qbittorrent
          containerPort: 8080
        volumeMounts:
        - name: qbittorrent
          mountPath: /config
        - name: downloads-movies
          mountPath: /downloads/movies
        - name: downloads-series
          mountPath: /downloads/series
        - name: qbittorrent-secrets
          mountPath: "/mnt/vault"
          readOnly: true
        - mountPath: /dev/net/tun
          name: dev-net-tun
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: qbittorrent
        persistentVolumeClaim:
          claimName: qbittorrent
      - name: downloads-series
        persistentVolumeClaim:
          claimName: downloads-series
      - name: downloads-movies
        persistentVolumeClaim:
          claimName: downloads-movies
      - name: qbittorrent-secrets
        csi:
          driver: "secrets-store.csi.k8s.io"
          readOnly: true
          volumeAttributes:
            secretProviderClass: "qbittorrent"
      - name: dev-net-tun
        hostPath:
          path: /dev/net/tun
