qbittorrent-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  selector:
    app: qbittorrent
    part-of: qbittorrent
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: qbittorrent
